# LeadVoicer

./: .gitignore  CMakeLists.txt  README.md  index.html
Source/: ChordEngine.cpp  ChordEngine.h  ChordizerLink.cpp  ChordizerLink.h  GroovizerEditor.cpp  GroovizerEditor.h  GroovizerEngine.cpp  GroovizerEngine.h  GroovizerProcessor.cpp  GroovizerProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Tests/: ChordEngineTests.cpp  GroovizerEngineTests.cpp
assets/soundfonts/: README.md
